# python-development-coursework

./: .env.example  README.md  main.py  pyproject.toml
logs/: mylog.txt
src/: decorators.py  external_api.py  generators.py  logger.py  masks.py  processing.py  utils.py  widget.py
tests/: conftest.py  test_decorator.py  test_external_api.py  test_generators.py  test_src.py  test_utils.py  tests.py
